Resolve HealthOmics IAM Permission Issue
HealthOmics requires RAM permissions for creating the VariantStore.

--- a/App/template.yaml
+++ b/App/template.yaml
@@ -158,6 +158,14 @@ Resources:
                 - iam:GetRole
               Resource:
                 - !GetAtt OmicsRole.Arn
+            - Effect: Allow
+              Action:
+                - ram:AcceptResourceShareInvitation
+                - ram:GetResourceShareInvitations
+              Resource: "*"
+              Condition:
+                StringEquals:
+                  aws:CalledViaLast: "omics.amazonaws.com"
       Events:
         BucketEvent:
           Type: S3
